--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mendix/pluggable-widgets-tools": "^9.0.0"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bpmn-js": "^10.2.1",
     "classnames": "^2.2.6"
   }
